# Imagine3D

./: .gitignore  CMakeLists.txt  README.md
IM3D/: CMakeLists copy.txt  CMakeLists.txt
IM3D/src/: IM3D.h  IM3Dpch.cpp  IM3Dpch.h
IM3D/src/IM3D/: Application.cpp  Application.h  Camera.cpp  ImGuiLayer.cpp  Main.cpp  Shader.h
IM3D/src/IM3D/Core/: Application.cpp  Application.h  Debug.h  EntryPoint.h  Event.h  Input.h  Log.cpp  Log.h  PlatformDetection.h
IM3D/src/IM3D/Renderer/: Camera.h  Mesh.h  Renderer.cpp  Renderer.h
IM3D/src/IM3D/Window/: Window.cpp  Window.h  WindowGLFW.cpp  WindowGLFW.h  WindowOptions.h
Sandbox/: CmakeLists.txt  bandr.bat
Sandbox/src/: Sandbox.cpp
assets/shaders/: def.frag  def.vert  light.frag  light.vert  lit_phong.frag  lit_spot.frag  model.frag  model.vert  render_texture.frag  skybox.vert
src/: IM3D.h  camera.cpp  glad.c  imguilayer.cpp  imguilayer.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  primitive.cpp  shader.cpp  shader.h  texture.cpp  texture.h
src/IM3D/: application.cpp  core.h  imguilayer.cpp  imguilayer.h  main.cpp  mesh.cpp  model.h  primitive.h  shader.cpp  skybox.cpp  skybox.h  texture.cpp
